--- a/index.html
+++ b/index.html
@@ -75,6 +75,19 @@
       text-decoration: none;
       font-weight: 600;
     }
+    @media (max-width: 600px) {
+      h2 {
+        font-size: 1.5rem;
+      }
+      nav {
+        flex-direction: column;
+        align-items: center;
+      }
+      nav a {
+        padding: 0.5rem 0;
+        display: block;
+      }
+    }
   </style>
 </head>
 <body>
