--- a/index.html
+++ b/index.html
@@ -75,7 +75,10 @@
       text-decoration: none;
       font-weight: 600;
     }
-    @media (max-width: 600px) {
+    @media (max-width: 768px) {
+      header {
+        padding: 1.5rem 1rem;
+      }
       h2 {
         font-size: 1.5rem;
       }
@@ -86,6 +89,12 @@
       nav a {
         padding: 0.5rem 0;
         display: block;
+      }
+      section {
+        padding: 1.5rem 1rem;
+      }
+      .card {
+        padding: 1rem;
       }
     }
   </style>
