--- a/index.html
+++ b/index.html
@@ -118,8 +118,8 @@
 <section id="about">
   <h2>O mně</h2>
   <div class="card">
-    <p>Jsem absolvent bakalářského oboru <strong>Geoinformatika a kartografie</strong> na Univerzitě Palackého v Olomouci. Baví mě práce s prostorovými i statistickými daty, mapami a databázemi. Datové analýze se věnuji i samostatně mimo školu – je to oblast, které bych se chtěl profesně věnovat. Ve volném čase rád sportuji, chodím na hory a na procházky se svým flat-coated retrívrem.</p>
-  
+    <p>Jsem absolvent bakalářského oboru <strong>Geoinformatika a kartografie</strong> na Univerzitě Palackého v Olomouci. Baví mě práce s prostorovými i statistickými daty, mapami a databázemi. Datové analýze se věnuji i samostatně mimo školu – je to oblast, které bych se rád v budoucnu věnoval. Ve volném čase rád sportuji, chodím na hory a na procházky se svým flat-coated retrívrem.</p>
+  <p> Ze stránky GISu mě baví veškeré prostorové analýzy (síťové analýzy, práce s rastry, geostatistika...), také mě baví tvorba vizualizací, zkrátka obecně práce s daty.</p>
 
 
 <br>
